--- a/app/src/main/res/layout/activity_gravitation.xml
+++ b/app/src/main/res/layout/activity_gravitation.xml
@@ -182,8 +182,73 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/bodyList"
                     android:layout_width="match_parent"
-                    android:layout_height="402dp" />
+                    android:layout_height="wrap_content" />
             </LinearLayout>
+
+            <View
+                android:id="@+id/divider5"
+                android:layout_width="match_parent"
+                android:layout_height="5dp"
+                android:layout_weight="1"
+                android:background="?android:attr/listDivider" />
+
+            <TextView
+                android:id="@+id/textView51"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Campo en un punto"
+                android:textAlignment="center" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <EditText
+                    android:id="@+id/point_x"
+                    android:layout_width="10dp"
+                    android:layout_height="60dp"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:hint="x"
+                    android:inputType="numberSigned|numberDecimal"
+                    android:textAlignment="center" />
+
+                <EditText
+                    android:id="@+id/point_y"
+                    android:layout_width="10dp"
+                    android:layout_height="60dp"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:hint="y"
+                    android:inputType="numberSigned|numberDecimal"
+                    android:textAlignment="center" />
+
+                <EditText
+                    android:id="@+id/point_z"
+                    android:layout_width="10dp"
+                    android:layout_height="60dp"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:hint="z"
+                    android:inputType="numberSigned|numberDecimal"
+                    android:textAlignment="center" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/pointResult"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Campo"
+                android:textAlignment="center"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/button12"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:onClick="gravityFieldInPoint"
+                android:text="Calcular" />
 
         </LinearLayout>
     </ScrollView>
