--- a/app/src/main/res/layout/activity_gravitation.xml
+++ b/app/src/main/res/layout/activity_gravitation.xml
@@ -243,6 +243,46 @@
                 android:textAlignment="center"
                 android:textStyle="bold" />
 
+            <TextView
+                android:id="@+id/textView52"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Fuerza de un cuerpo en ese punto"
+                android:textAlignment="center" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <EditText
+                    android:id="@+id/bodyInPointMass"
+                    android:layout_width="262dp"
+                    android:layout_height="60dp"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:hint="Masa"
+                    android:inputType="numberSigned|numberDecimal"
+                    android:textAlignment="center" />
+
+                <TextView
+                    android:id="@+id/textView53"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="kg"
+                    android:textAlignment="center" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/forceResult"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Fuerza"
+                android:textAlignment="center"
+                android:textStyle="bold" />
+
             <Button
                 android:id="@+id/button12"
                 android:layout_width="match_parent"
