Changed ActionBars and updates elliptical orbit

--- a/app/src/main/res/layout/activity_elliptical_orbit.xml
+++ b/app/src/main/res/layout/activity_elliptical_orbit.xml
@@ -309,6 +309,13 @@
                 android:text="Momento angular"
                 android:textAlignment="center" />
 
+            <TextView
+                android:id="@+id/periodText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Período"
+                android:textAlignment="center" />
+
             <View
                 android:id="@+id/divider6"
                 android:layout_width="match_parent"
